[gd_scene load_steps=21 format=3 uid="uid://drrf5m4mdwg7i"]

[ext_resource type="Texture2D" uid="uid://burseqo854hpf" path="res://assets/background/academia-background.png" id="1_0kixj"]
[ext_resource type="Script" uid="uid://4x64v0yb3cv1" path="res://scripts/telas/cadastro.gd" id="1_mtrka"]
[ext_resource type="Texture2D" uid="uid://bo4oap4lyjvu3" path="res://assets/ui/botoes/planilha.png" id="2_4ti2h"]
[ext_resource type="FontFile" uid="uid://0lorj40s1j2h" path="res://fontes/FONT_UI.TTF" id="3_jxwpu"]
[ext_resource type="Script" uid="uid://cxw1lfymgf1wq" path="res://scripts/telas/senha_visível.gd" id="4_1ucbg"]
[ext_resource type="Texture2D" uid="uid://nimbrl5cby15" path="res://assets/ui/botoes/button.png" id="5_fi2by"]
[ext_resource type="Texture2D" uid="uid://c0yrkkx0me73g" path="res://assets/ui/botoes/botao_voltar.png" id="6_1ucbg"]
[ext_resource type="FontFile" uid="uid://bxeo40x4iy0av" path="res://fontes/ari-w9500-bold.ttf" id="6_n2dqs"]
[ext_resource type="Texture2D" uid="uid://e14n0yht4mhg" path="res://assets/ui/botoes/olho_aberto.png" id="7_4ti2h"]
[ext_resource type="PackedScene" uid="uid://clkmuf3bqcjpt" path="res://telas/tela_carregamento.tscn" id="9_7tfdf"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_bw45y"]
texture = ExtResource("1_0kixj")
modulate_color = Color(0.462291, 0.462291, 0.462291, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jxwpu"]
bg_color = Color(0.937255, 0.937255, 0.933333, 0.580392)
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_n2dqs"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fi2by"]
texture = ExtResource("5_fi2by")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_lqk4g"]
texture = ExtResource("5_fi2by")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1ucbg"]
texture = ExtResource("5_fi2by")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7tfdf"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mtrka"]
texture = ExtResource("6_1ucbg")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_uhbji"]
texture = ExtResource("6_1ucbg")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4ti2h"]
texture = ExtResource("6_1ucbg")

[node name="Cadastro" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mtrka")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_bw45y")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -431.0
offset_top = -426.0
offset_right = 431.0
offset_bottom = 454.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_4ti2h")
script = ExtResource("4_1ucbg")

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -153.0
offset_top = -255.0
offset_right = 156.0
offset_bottom = 267.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_jxwpu")
theme_override_font_sizes/font_size = 40
text = "CADASTRO"
horizontal_alignment = 1

[node name="StatusLabel" type="Label" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.764495, 0.0543083, 0.0876316, 1)
theme_override_fonts/font = ExtResource("6_n2dqs")
theme_override_font_sizes/font_size = 17
horizontal_alignment = 1
autowrap_mode = 3

[node name="Label_Nome" type="Label" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_jxwpu")
theme_override_font_sizes/font_size = 30
text = "Nome"

[node name="Nome" type="LineEdit" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 15
theme_override_styles/normal = SubResource("StyleBoxFlat_jxwpu")
placeholder_text = "Insira seu nome"

[node name="Label_Email" type="Label" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_jxwpu")
theme_override_font_sizes/font_size = 30
text = "Email"

[node name="Email" type="LineEdit" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 15
theme_override_styles/normal = SubResource("StyleBoxFlat_jxwpu")
placeholder_text = "Insira seu nome"

[node name="Label_Senha" type="Label" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_jxwpu")
theme_override_font_sizes/font_size = 30
text = "Senha"

[node name="Senha" type="LineEdit" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 15
theme_override_styles/normal = SubResource("StyleBoxFlat_jxwpu")
placeholder_text = "Insira seu nome"
secret = true

[node name="Label_Confirmação" type="Label" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_jxwpu")
theme_override_font_sizes/font_size = 20
text = "Confirme sua senha"

[node name="Confirmação_Senha" type="LineEdit" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 15
theme_override_styles/normal = SubResource("StyleBoxFlat_jxwpu")
placeholder_text = "Insira seu nome"
secret = true

[node name="CadastrarBtn" type="Button" parent="NinePatchRect/VBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(30, 60)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_jxwpu")
theme_override_font_sizes/font_size = 29
theme_override_styles/focus = SubResource("StyleBoxEmpty_n2dqs")
theme_override_styles/hover = SubResource("StyleBoxTexture_fi2by")
theme_override_styles/pressed = SubResource("StyleBoxTexture_lqk4g")
theme_override_styles/normal = SubResource("StyleBoxTexture_1ucbg")
text = "ENVIAR"

[node name="VoltarBtn" type="Button" parent="NinePatchRect"]
clip_contents = true
custom_minimum_size = Vector2(30, 30)
layout_mode = 0
offset_left = 931.0
offset_top = 84.0
offset_right = 1036.0
offset_bottom = 189.0
theme_override_fonts/font = ExtResource("3_jxwpu")
theme_override_font_sizes/font_size = 29
theme_override_styles/focus = SubResource("StyleBoxEmpty_7tfdf")
theme_override_styles/hover = SubResource("StyleBoxTexture_mtrka")
theme_override_styles/pressed = SubResource("StyleBoxTexture_uhbji")
theme_override_styles/normal = SubResource("StyleBoxTexture_4ti2h")

[node name="TextureButton" type="TextureButton" parent="NinePatchRect"]
layout_mode = 0
offset_left = 589.0
offset_top = 516.0
offset_right = 633.0
offset_bottom = 547.0
texture_normal = ExtResource("7_4ti2h")
texture_pressed = ExtResource("7_4ti2h")
texture_hover = ExtResource("7_4ti2h")
ignore_texture_size = true
stretch_mode = 0

[node name="tela_carregamento" parent="." instance=ExtResource("9_7tfdf")]
visible = false
